--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,32 @@
 {
     "version": 2,
     "builds": [
-        {
-            "src": "./index.js",
-            "use": "@vercel/node"
-        }
+      {
+        "src": "index.js",
+        "use": "@vercel/node"
+      },
+      {
+        "src": "routes/*.js",
+        "use": "@vercel/node"
+      }
     ],
     "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "/"
-        }
+      {
+        "src": "/auth",
+        "dest": "routes/auth.js"
+      },
+      {
+        "src": "/production",
+        "dest": "routes/production.js"
+      },
+      {
+        "src": "/report",
+        "dest": "routes/report.js"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "index.js"
+      }
     ]
-}
+  }
+  
