--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "version": 2,
     "builds": [
       {
-        "src": "index.js",
+        "src": "app.js",
         "use": "@vercel/node"
       },
       {
@@ -25,7 +25,7 @@
       },
       {
         "src": "/(.*)",
-        "dest": "index.js"
+        "dest": "app.js"
       }
     ]
   }
